--- a/index.html
+++ b/index.html
@@ -1,13 +1,56 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="styles.css" type="text/css">
     <title>Tech It Easy Dashboard</title>
 </head>
 <body>
 
-<h1>Titel</h1>
+<!--Data injecteren per element-->
+<h1>Televisies</h1><br/>
 
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda delectus ea est exercitationem ipsa laboriosam, modi nam, placeat quis quisquam rem totam, ut. Accusantium asperiores culpa cumque dignissimos dolor, ex excepturi fuga illum labore magnam molestias numquam quae, quaerat reprehenderit suscipit temporibus ullam velit? Ab error facere molestiae, mollitia quaerat sunt tenetur? Minima nulla saepe sequi soluta voluptatum! Accusamus accusantium adipisci aperiam assumenda blanditiis consequuntur culpa debitis dignissimos eligendi eos error facilis fugit itaque maiores natus nemo nisi nulla, recusandae tenetur, vel. At dolorem expedita laudantium quo reprehenderit saepe tempora totam voluptas! Assumenda beatae deserunt, fuga laborum porro quae voluptate?</p>
+
+<h3 id="name-of-television">[name of television]</h3>
+
+<h3 id="brand-of-television">[brand of television]</h3>
+
+<h3 id="price-of-television">[price of television]</h3>
+
+<h3 id="type-of-television">[type of televisions]</h3>
+
+
+<br/><br/>
+
+
+<h3 id="original-stock-tvs">[original stock]</h3>
+
+<h3 id="sold-televisions">[soldtvs]</h3>
+
+<h3 id="to-be-sold">[still to be sold - televisions]</h3>
+
+
+
+
+<!--Data injecteren in zijn geheel-->
+<div id="all-details-inner"></div>
+
+
+
+
+
+<!--Loopen door alle data-->
+<div id="loop-details"></div>
+
+
+
+
+
+<!--Data over verkochte televisies-->
+<div id="sold-tvs"></div>
+
+
+<script src="main.js"></script>
+<script src="DOM.js"></script>
 </body>
 </html>
